[metadata]
name = git-lsst
version = 0.2.2
description = "Git plugin for working on LSST"
url = https://github.com/spenczar/git-lsst
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
author = Spencer Nelson
author_email = swnelson@uw.edu
license = GPLv3

[options]
install_requires =
    jira
    PyGithub
    giturlparse
scripts =
    git-lsst

[options.extras_require]
dev =
    mypy
    flake8
    flake8-mypy
    black

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude =
        __pycache__,
        **/*/__init__.py,
        .eggs/,
        .git/,
         venv

[tool:pytest]
log_level=WARN
log_cli=true
